<resources>
	<string name="app_name">Chalk Jotto</string>
	<string name="time">Time</string>
	<string name="fastest_time">Fastest time</string>
	<string name="fastest_time_improved">* You beat your previous best of %1$s</string>
	<string name="fewest_guesses">Fewest guesses</string>
	<string name="guesses_no_colon">Guesses</string>
	<string name="fewest_guesses_improved">* You beat your previous best of %1$d guesses</string>
	<string name="normal">Normal</string>
	<string name="hard">Hard</string>
	<string name="insane">Insane</string>
	<string name="guessed_word">Guessed Words</string>
	<string name="submit">Go</string>
	<string name="guesses">Guesses:</string>
	<string name="reset_colors">Reset Colors</string>
	<string name="give_up">Give Up</string>
	<string name="resume">Resume</string>
	<string name="new_game">New Game</string>
	<string name="word_length">Word Length</string>
	<string name="word_difficulty">Word Difficulty</string>
	<string name="continueToGame">Continue</string>
	<string name="challenge_a_friend">Challenge a friend</string>
	<string name="accept_challenge">Accept challenge</string>
	<string name="accept_challenge_explanation">You\'ve been challenged to deduce a word:</string>
	<string name="accept_challenge_explanation_won">Your challenger was able to solve it in:</string>
	<string name="accept_challenge_explanation_lost">Your challenger gave up before they could solve it.</string>
	<string name="accept_challenge_explanation_shared_guesses">Your challenger has chosen to share their guesses with you.</string>
	<string name="accept_challenge_explanation_shared_deductions">Your challenger has chosen to share their deductions with you.</string>
	<string name="accept_challenge_explanation_shared_guesses_and_deductions">Your challenger has chosen to share their guesses and deductions with you.</string>
	<string name="accept_challenge_explanation_guesses_not_allowed">You must complete the challenge with only the guesses provided by your challenger.</string>
	<string name="accept_challenge_explanation_overwrite">You have a game in progress. Accepting this challenge will delete that game.</string>
	<string name="share_challenge">Share challenge</string>
	<string name="share_challenge_explanation_won">Challenge a friend to deduce this word faster or more efficiently than you could</string>
	<string name="share_challenge_explanation_lost">Challenge a friend to deduce the word you couldn\'t</string>
	<string name="allow_new_guesses">Allow new guesses</string>
	<string name="allow_new_guesses_explanation">Turn this off if you want to challenge them to deduce the word using only the exact same guesses as you</string>
	<string name="share_your_guesses">Share your guesses</string>
	<string name="share_your_guesses_explanation">Turn this on if you want them to see all the guesses you made</string>
	<string name="share_your_deductions">Share your deductions</string>
	<string name="share_your_deductions_explanation">Turn this on if you want them to see all the deductions (letter coloring) you\'ve made</string>
	<string name="submit_bug_report">Submit Bug Report</string>
	<string name="cancel">Cancel</string>
	<string name="done">Done</string>
	<string name="play">Play</string>
	<string name="sound">Sound</string>
	<string name="game_paused">Game Paused</string>
	<string name="lucky">Pure Luck</string>
	<string name="win">Correct!</string>
	<string name="lose">The word was:</string>
	<string name="info">%1$d guesses in %2$s</string>
	<string name="gave_up">You gave up after %1$d guesses in %2$s</string>
	<string name="lucky_message">You guessed the secret word on your first try. There\'s only a 1 in %1$d chance of that happening</string>
	<string name="gave_up_without_trying">But you probably don\'t care since you didn\'t even try</string>
	<string name="show_tutorial">Show Tutorial</string>
	<string name="vibration">Keyboard Vibration</string>
	<string name="assistance">Automatic Basic Deduction</string>
	<string name="assistance_description">This setting is intended to save you lots of clicking. It\'s not intended to make the game any easier. After each guess, letters are automatically colored when the result leaves no doubt:\nIf the number of matching letters is equal to the number of letters you have marked green, then all the other letters in that word are automatically marked red. The same logic applies in reverse for letters you have marked red. Eg, 0 letters match, all letters in word marked red.</string>
	<string name="tutorial_hint">To make it easier to keep track of which letters you think are in the secret word, you can long press on a letter and set it\'s color.</string>
	<string name="tutorial_objective">Guess the secret word. With every guess, you will be told how many letters your guess shares with the secret word.</string>
	<string name="tutorial_example">If the secret word is \"GUEST\" and you guess \"SEATS\" you\'ll be told that there are 3 matching letters, since both words have an E, an S, and a T. The duplicate S does not count twice.</string>
	<string name="hint">Hint</string>
	<string name="objective">Objective</string>
	<string name="example">Example</string>
	<string name="tutorial">Tutorial</string>
	<string name="pause_button">Pause Button</string>
	<string name="help">Help</string>
    <string name="view_legalese_version">View Legalese Version</string>
	<string name="experiencing_an_issue">Experiencing an issue or have other feedback? Contact me:</string>
	<string name="contact_email">chalkjotto@gmail.com</string>
	<string name="github">You can submit a bug report or view the source code on GitHub</string>
	<string name="app_version">App Version: %1$s</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="privacy_policy_explanation">I wanted this app to be completely offline and collect no data. Unfortunately, collecting some amount of data is unavoidable. I added something made by Google called Firebase Crashlytics. When the app crashes, it collects some information about your phone (such as the manufacturer and model number) and submits it to Google along with some info for me about what exactly the app was trying to do when it crashed. Without this, it would be impossible for me to detect or fix any issues with the app.</string>
	<string name="lesson_strong_start">Give yourself a strong start</string>
	<string name="lesson_strong_start_explanation">Come up with a set of words to guess that cover almost all letters of the alphabet with minimal repeats. This will give you a strong base to begin making deductions from.\nThis example game shows 5 guesses that have covered 24 possible letters. Try selecting the most common letter(s) from each and using them to guess a word. This should quickly help you narrow down the correct letters.</string>
	<string name="lesson_maximize_information">Make guesses that give maximal information</string>
	<string name="lesson_maximize_information_explanation">In this example game, you will see that there are 4 letters that might be in the solution. You can break this down into 2 pairs. Choose one letter from each pair and guess a word with it. This will immediately narrow down which 2 of the 4 letters are correct.</string>
    <string name="learn_to_play_better_by">Learn to play better by completing challenge lessons</string>
    <string name="high_contrast">High Contrast</string>
    <string name="stats_title">Statistics</string>
    <string name="filter_difficulty">Difficulty</string>
    <string name="filter_word_length">Word Length</string>
    <string name="all">All</string>
    <string name="stats_played">Played</string>
    <string name="stats_win_rate">Win %</string>
    <string name="stats_avg_guesses">Avg Guesses</string>
    <string name="stats_avg_time">Avg Time</string>
    <string name="stats_time_trend">Time Trend</string>
    <string name="stats_guesses_chart_title">Guesses Trend</string>
    <string name="stats_chart_histogram">Guesses Histogram</string>
    <string name="stats_no_data">No data yet</string>
    <string name="achievements_title">Achievements</string>
    <string name="settings">Settings</string>
	<string name="achievement_lucky_short">Lucky Bastard</string>
	<string name="achievement_lucky_long">You cheated to get this, didn\'t you?</string>
	<string name="achievement_give_up_short">Mama raised a quitter</string>
	<string name="achievement_give_up_long">90% of players give up right before they would have guessed the right answer</string>
	<string name="achievement_tutorial_short">Read the Tutorial</string>
	<string name="achievement_tutorial_long">You literally can\'t avoid getting this achievement</string>
	<string name="achievement_lesson_1_short">Complete Lesson\u00A01</string>
	<string name="achievement_lesson_1_long">Optimal starting words are left as an exercise for the reader</string>
	<string name="achievement_lesson_2_short">Complete Lesson\u00A02</string>
	<string name="achievement_lesson_2_long">If you\'re still struggling, try being smarter</string>
	<string name="achievement_win_title">Win</string>
	<string name="achievement_win_normal_4_short">First Blood</string>
	<string name="achievement_win_normal_5_short">Getting Started</string>
	<string name="achievement_win_normal_6_short">Making Progress</string>
	<string name="achievement_win_normal_7_short">Word Warrior</string>
	<string name="achievement_win_hard_4_short">Rising Up</string>
	<string name="achievement_win_hard_5_short">Stepping Up</string>
	<string name="achievement_win_hard_6_short">Hard Earned</string>
	<string name="achievement_win_hard_7_short">No Easy Feat</string>
	<string name="achievement_win_insane_4_short">Against All Odds</string>
	<string name="achievement_win_insane_5_short">Defying Logic</string>
	<string name="achievement_win_insane_6_short">The Impossible Dream</string>
	<string name="achievement_win_insane_7_short">Certified Genius</string>
	<string name="achievement_win_normal_long">Win a Normal %1$d-Letter game</string>
	<string name="achievement_win_hard_long">Win a Hard %1$d-Letter game</string>
	<string name="achievement_win_insane_long">Win an Insane %1$d-Letter game</string>
	<string name="achievement_fast_title">Win Quickly</string>
	<string name="achievement_fast_normal_4_short">Colloquial Typist</string>
	<string name="achievement_fast_normal_5_short">Colloquial Receptionist</string>
	<string name="achievement_fast_normal_6_short">Colloquial Secretary</string>
	<string name="achievement_fast_normal_7_short">Colloquial Stenographer</string>
	<string name="achievement_fast_hard_4_short">Eloquent Typist</string>
	<string name="achievement_fast_hard_5_short">Eloquent Receptionist</string>
	<string name="achievement_fast_hard_6_short">Eloquent Secretary</string>
	<string name="achievement_fast_hard_7_short">Eloquent Stenographer</string>
	<string name="achievement_fast_insane_4_short">Sesquipedalian Typist</string>
	<string name="achievement_fast_insane_5_short">Sesquipedalian Receptionist</string>
	<string name="achievement_fast_insane_6_short">Sesquipedalian Secretary</string>
	<string name="achievement_fast_insane_7_short">Sesquipedalian Stenographer</string>
	<string name="achievement_fast_normal_long">Win a Normal %1$d-Letter game quickly</string>
	<string name="achievement_fast_hard_long">Win a Hard %1$d-Letter game quickly</string>
	<string name="achievement_fast_insane_long">Win an Insane %1$d-Letter game quickly</string>
	<string name="achievement_efficient_title">Win Efficiently</string>
	<string name="achievement_efficient_normal_4_short">Officer Columbo</string>
	<string name="achievement_efficient_normal_5_short">Detective Columbo</string>
	<string name="achievement_efficient_normal_6_short">Sergeant Columbo</string>
	<string name="achievement_efficient_normal_7_short">Lieutenant Columbo</string>
	<string name="achievement_efficient_hard_4_short">Doctor Watson</string>
</resources>