<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpUsage">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewAppVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewExperiencingAnIssue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/experiencing_an_issue" />

            <TextView
                android:id="@+id/tvContactMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/contact_email" />

            <TextView
                android:id="@+id/tvViewSourceCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/github" />

            <TextView
                android:id="@+id/buttonViewCode"
                android:layout_width="190dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_white"
                android:backgroundTint="@color/colorLetterYes"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/submit_bug_report"/>

            <TextView
                android:id="@+id/textViewPrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:layout_marginEnd="32dp"
                android:text="@string/privacy_policy" />

            <TextView
                android:id="@+id/textViewPrivacyPolicyExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/privacy_policy_explanation" />

            <TextView
                android:id="@+id/buttonViewPrivacyPolicy"
                android:layout_width="190dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_white"
                android:backgroundTint="@color/colorLetterMaybe"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/view_legalese_version" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textViewAppVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/app_version"
        app:layout_constraintBottom_toTopOf="@+id/buttonDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/buttonDone"
        android:layout_width="120dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_white"
        android:gravity="center"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>